[package]
name = "krio-async"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-function stackless coroutines (planned). Function-colour propagation, captures-as-fields, caller↔callee state-machine composition. Built on krio-stackless."

[dependencies]
krio-core = { workspace = true }
krio-stackless = { workspace = true }

[lints]
workspace = true
