[package]
name = "krio-fiber"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stackful Wren/Lua-style fibers. Per-fiber stack allocation, target-specific context-switch primitive, first-class Fiber values."

[dependencies]
krio-core = { workspace = true }

[lints]
workspace = true
