[package]
name = "krio-preempt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Time-slicing scheduler over krio-fiber. Cooperative slicing today (deadline-driven yields); real signal-based preemption planned."

[dependencies]
krio-core = { workspace = true }
krio-fiber = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
